--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<input type="text" [(ngModel)]="name">
-<p>{{ name }}</p>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+
+      <h3>I am in the component</h3>
+      <hr>
+      <app-servers></app-servers>
+
+    </div>
+  </div>
+</div>
 
